# gmm-plug-in

./: .gitignore  README.md
BaldursGate3/: BaldursGate3.csproj  Program.cs
BaldursGate3/Properties/: AssemblyInfo.cs
Generate/: Generate.sln
Generate/Generate/: Config.cpp  Config.h  Game.cpp  Game.h  Generate.vcxproj  Generate.vcxproj.filters  Player.cpp  Player.h  Vehicle.cpp  Vehicle.h  Weapon.cpp  Weapon.h  main.cpp  script.cpp  script.h  scriptinfo.h  scriptmenu.cpp  scriptmenu.h
Generate/Generate/inc/: main.h  natives.h  natives2.cpp  natives2.h
GetSpecialFolder/: GetSpecialFolder.csproj  Program.cs
RE2ModLoader/: CMakeLists.txt
RE2ModLoader/include/reframework/: API.h  API.hpp
RE2ModLoader/src/: RE2ModLoader.cpp  RE2ModLoader.h  XMHook.hpp  dllmain.hpp
RE2ModLoader/src/log/: Logger.hpp
Steam/: Program.cs  Steam.csproj  Steam.sln
Steam/Steam/: SteamScript.cs
rpf/: Program.cs  README.md  package.json  rpf.csproj  rpf.sln
rpf/model/: Directory.cs  MainModel.cs  RpfHandler.cs
